--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <span class="text-primary">Houston</span>
                     </h1>
                     <div class="subheading mb-5">
-                        Dallas, TX  ·
+                        Dallas, TX  · (817) 939-5024 ·
                         <a href="s.houston406@gmail.com">s.houston406@gmail.com</a>
                     </div>
                     <p class="lead mb-5">I am a software engineer with a passion to constantly learn new technologies and problem solve. In addition, I find it especially fulfilling to work collaboratively to see an application evolve from concept to finished product. I have extensive experience working with Python, JavaScript, Flask and React. When I’m not reading documentation or squashing a bug you can usually find me playing a fierce game of tennis with friends.
