made skill icons bigger and less white space under projects

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             </section>
             <hr class="m-0" />
             <!-- Projects-->
-            <section style="height: 1500px" id="education">
+            <section style="height: 1150px" id="education">
                 <h2 style="margin-left: 47px; padding-top: 70px" class="mb-5">Projects</h2>
                 <div style="display:flex; justify-content: space-around;">
                     <div style="width: 45%; height: 500px; margin-left: 100px">
@@ -193,23 +193,23 @@
             </section>
             <hr class="m-0" />
             <!-- Skills-->
-            <section class="resume-section" id="skills">
+            <section class="resume-section" id="skills" style="width: fit-content;">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Skills</h2>
                     <div class="subheading mb-3">Programming Languages & Tools</div>
-                    <ul class="list-inline dev-icons">
-                        <li class="list-inline-item"><i class="devicon-python-plain-wordmark colored"></i></li>
-                        <li class="list-inline-item"><img style="height:75px; width:75px" src="assets/img/flask_icon.png" alt=""/></li>
-                        <li class="list-inline-item"><i class="devicon-nodejs-plain colored"></i></li>
-                        <li class="list-inline-item"><i class="devicon-react-original-wordmark colored"></i></li>
-                        <li class="list-inline-item"><img style="height:70px; width:70px" src="assets/img/redux_logo.png" alt=""/></li>
-                        <li class="list-inline-item"><i class="devicon-express-original-wordmark colored"></i></li>
-                        <li class="list-inline-item"><i class="devicon-postgresql-plain-wordmark colored"></i></li>
-                        <li class="list-inline-item"><i class="devicon-amazonwebservices-plain-wordmark colored"></i></li>
-                        <li class="list-inline-item"><i class="devicon-docker-plain-wordmark colored"></i></li>
-                        <li class="list-inline-item"><i class="devicon-html5-plain-wordmark colored"></i></li>
-                        <li class="list-inline-item"><i class="devicon-css3-plain-wordmark colored"></i></li>
-                        <li class="list-inline-item"><i class="devicon-git-plain-wordmark colored"></i></li>
+                    <ul class="list-inline dev-icons" style="width: 100%">
+                        <li class="list-inline-item" style="height: 100px; width: 100px;"><i class="devicon-python-plain-wordmark colored" style="font-size: 6rem;"></i></li>
+                        <li class="list-inline-item" style="height: 100px; width: 100px;"><img style="height:120px; width:100px; margin-bottom: 30px;" src="assets/img/flask_icon.png" alt=""/></li>
+                        <li class="list-inline-item"><i class="devicon-nodejs-plain colored" style="font-size: 6rem"></i></li>
+                        <li class="list-inline-item"><i class="devicon-react-original-wordmark colored" style="font-size: 6rem"></i></li>
+                        <li class="list-inline-item" style="height:100px; width:100px"><img style="height:120px; width:100px; margin-bottom: 30px;"  src="assets/img/redux_logo.png" alt=""/></li>
+                        <li class="list-inline-item"><i class="devicon-express-original-wordmark colored" style="font-size: 6rem"></i></li>
+                        <li class="list-inline-item"><i class="devicon-postgresql-plain-wordmark colored" style="font-size: 6rem"></i></li>
+                        <li class="list-inline-item"><i class="devicon-amazonwebservices-plain-wordmark colored" style="font-size: 6rem"></i></li>
+                        <li class="list-inline-item"><i class="devicon-docker-plain-wordmark colored" style="font-size: 6rem"></i></li>
+                        <li class="list-inline-item"><i class="devicon-html5-plain-wordmark colored" style="font-size: 6rem"></i></li>
+                        <li class="list-inline-item"><i class="devicon-css3-plain-wordmark colored" style="font-size: 6rem"></i></li>
+                        <li class="list-inline-item"><i class="devicon-git-plain-wordmark colored" style="font-size: 6rem"></i></li>
                     </ul>
                 </div>
             </section>
