added resume and padding for skill icons

--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
                         <a class="social-icon" href="https://github.com/StedHouston"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="https://angel.co/u/stedman-houston"><i class="fab fa-angellist"></i></a>
                     </div>
+                    <div style="height:fit-content; width: fit-content; margin-top: 10px;">
+                        <a href="Houston_Stedman_Resume.pdf" style="font-size: 25px;">Resume</a>
+                    </div>
                 </div>
             </section>
             <hr class="m-0" />
@@ -197,19 +200,19 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Skills</h2>
                     <div class="subheading mb-3">Programming Languages & Tools</div>
-                    <ul class="list-inline dev-icons" style="width: 100%">
-                        <li class="list-inline-item" style="height: 100px; width: 100px;"><i class="devicon-python-plain-wordmark colored" style="font-size: 6rem;"></i></li>
-                        <li class="list-inline-item" style="height: 100px; width: 100px;"><img style="height:120px; width:100px; margin-bottom: 30px;" src="assets/img/flask_icon.png" alt=""/></li>
-                        <li class="list-inline-item"><i class="devicon-nodejs-plain colored" style="font-size: 6rem"></i></li>
-                        <li class="list-inline-item"><i class="devicon-react-original-wordmark colored" style="font-size: 6rem"></i></li>
-                        <li class="list-inline-item" style="height:100px; width:100px"><img style="height:120px; width:100px; margin-bottom: 30px;"  src="assets/img/redux_logo.png" alt=""/></li>
-                        <li class="list-inline-item"><i class="devicon-express-original-wordmark colored" style="font-size: 6rem"></i></li>
-                        <li class="list-inline-item"><i class="devicon-postgresql-plain-wordmark colored" style="font-size: 6rem"></i></li>
-                        <li class="list-inline-item"><i class="devicon-amazonwebservices-plain-wordmark colored" style="font-size: 6rem"></i></li>
-                        <li class="list-inline-item"><i class="devicon-docker-plain-wordmark colored" style="font-size: 6rem"></i></li>
-                        <li class="list-inline-item"><i class="devicon-html5-plain-wordmark colored" style="font-size: 6rem"></i></li>
-                        <li class="list-inline-item"><i class="devicon-css3-plain-wordmark colored" style="font-size: 6rem"></i></li>
-                        <li class="list-inline-item"><i class="devicon-git-plain-wordmark colored" style="font-size: 6rem"></i></li>
+                    <ul class="list-inline dev-icons" style="width: 100%;">
+                        <li class="list-inline-item" style="height: 100px; width: 100px; margin-bottom: 15px;"><i class="devicon-python-plain-wordmark colored" style="font-size: 6rem;"></i></li>
+                        <li class="list-inline-item" style="height: 100px; width: 100px; margin-bottom: 15px;"><img style="height:120px; width:100px; margin-bottom: 30px;" src="assets/img/flask_icon.png" alt=""/></li>
+                        <li class="list-inline-item" style="margin-bottom: 15px;"><i class="devicon-nodejs-plain colored" style="font-size: 6rem"></i></li>
+                        <li class="list-inline-item" style="margin-bottom: 15px;"><i class="devicon-react-original-wordmark colored" style="font-size: 6rem"></i></li>
+                        <li class="list-inline-item" style="height:100px; width:100px; margin-bottom: 15px;"><img style="height:120px; width:100px; margin-bottom: 30px;"  src="assets/img/redux_logo.png" alt=""/></li>
+                        <li class="list-inline-item" style="margin-bottom: 15px;"><i class="devicon-express-original-wordmark colored" style="font-size: 6rem"></i></li>
+                        <li class="list-inline-item" style="margin-bottom: 15px;"><i class="devicon-postgresql-plain-wordmark colored" style="font-size: 6rem"></i></li>
+                        <li class="list-inline-item" style="margin-bottom: 15px;"><i class="devicon-amazonwebservices-plain-wordmark colored" style="font-size: 6rem"></i></li>
+                        <li class="list-inline-item" style="margin-bottom: 15px;"><i class="devicon-docker-plain-wordmark colored" style="font-size: 6rem"></i></li>
+                        <li class="list-inline-item" style="margin-bottom: 15px;"><i class="devicon-html5-plain-wordmark colored" style="font-size: 6rem"></i></li>
+                        <li class="list-inline-item" style="margin-bottom: 15px;"><i class="devicon-css3-plain-wordmark colored" style="font-size: 6rem"></i></li>
+                        <li class="list-inline-item" style="margin-bottom: 15px;"><i class="devicon-git-plain-wordmark colored" style="font-size: 6rem"></i></li>
                     </ul>
                 </div>
             </section>
